--- a/eAppointmentClient/src/app/components/layouts/navbar/navbar.component.html
+++ b/eAppointmentClient/src/app/components/layouts/navbar/navbar.component.html
@@ -55,6 +55,11 @@
                 <i class="fas fa-user-injured me-2"></i>Patients
               </a>
             </li>
+            <li>
+              <a class="dropdown-item" routerLink="/users">
+                <i class="fas fa-id-badge me-2"></i>Users
+              </a>
+            </li>
             <li><hr class="dropdown-divider" /></li>
             <li>
               <a class="dropdown-item" routerLink="/appointments">
