--- a/eAppointmentClient/src/app/components/layouts/navbar/navbar.component.html
+++ b/eAppointmentClient/src/app/components/layouts/navbar/navbar.component.html
@@ -60,6 +60,11 @@
                 <i class="fas fa-id-badge me-2"></i>Users
               </a>
             </li>
+            <li>
+              <a class="dropdown-item" routerLink="/roles">
+                <i class="fas fa-user-shield me-2"></i>Roles
+              </a>
+            </li>
             <li><hr class="dropdown-divider" /></li>
             <li>
               <a class="dropdown-item" routerLink="/appointments">
